# my-riscv-asm

./: .gitignore  Cargo.toml  Dockerfile  README.md  commands.spec  rustfmt.toml  test.asm
.github/workflows/: build-docker.yml  tests.yml
spec/: commands.spec  csr.spec  instructions.spec  pseudo_simple.spec  registers.spec
src/: command.rs  filter.rs  immediate.rs  main.rs  param.rs  register.rs
test_cases/: instructions.cases  jump.cases  li.cases  pseudo_simple.cases
