[package]
name = "shuasm"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2021"

[dependencies]
clap = {version="4.0.32",features=["derive"]}
ezio = "0.1.2"
once_cell = "1.16.0"
parse_int = "0.6.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
